app/assets/stylesheets/components/session_form.scss
.session-form {
  padding: 0;
  min-height: 400px;
  flex-direction: column;
  display: flex;
}

.session-form-header {
  width: 1128px;
  margin-left: 45px;
  display: flex;
  align-items: bottom;
  position: relative;
  justify-content: space-between;
  flex-wrap: nowrap;
}

.loginpage-logo {
  display: relative;
  width: 115px;
  height: 80px;
  @media (max-width: 768px) {
    padding: 0 5px;
  }
}

.session-form-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  // Temp
  height: 628px;
  overflow-y: hidden;
}

.session-form-container {
  display: flex;
  flex-direction: column;
  width: 308px;
  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 12px 0px;
  box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 12px 0px;
  padding: 22px;
  border-radius: 8px;
  background: #FFFFFF;
  // margin-top: 60px;

  @media (max-width: 780px) {
    -webkit-box-shadow: none;
    box-shadow: none;
    width: 352px;
  }
}

.signup-form-container > label {
  margin-bottom: 5px;
}

.session-input-box {
  position: relative;
  width: 100%;
}

.session-input-box button {
  text-decoration:none;
  cursor: pointer;
  border: none;
  border-radius: 28px;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  background: transparent;
  position: absolute;
  top: 35px;
  right: 4px;
  color: #0a66c2;
  font-size: 14px;
  font-weight: 600;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
  line-height: 24px;
  outline-color: rgb(10, 102, 194);
  transition-duration: 0.167s;
  transition-property: background-color;
}

.session-input-box button:hover {
  background-color: rgb(208, 232, 255);
}

.session-input {
  font-size: 18px;
  width: calc(100% - 30px);
  height: 18px;
  padding-top: 26px;
  padding-bottom: 6px;
  padding-left: 12px;
  padding-right: 12px;
  border: 1px solid black;
  border-radius: 4px;
  margin-top: 22px;
  transition-duration: 0.334s;
  transition-property: border-color, box-shadow;
}

.session-input:focus {
  border: 1px solid #0a66c2;
  outline: 1px solid #0a66c2;
}

.form-header-text > h1 {
  font-weight: 600;
  height: 44px;
  color: black;
  font-size: 32px;
  margin-top: 5px;
}

.form-header-text > p {
  color: black;
  font-size: 14px;
  margin: 0;
}

.session-submit {
  font-size: 17px;
  font-weight: 500;
  font-family: inherit;
  height: 52px;
  background-color: #0a66c2;
  color: rgb(255, 255, 255);
  padding: 10px;
  border-radius: 25em;
  text-align: center;
  border: none;
  margin-top: 32px;
  margin-bottom: 12px;
}

.session-submit:hover {
  background-color: #004182;
  cursor: pointer;
}

.demo-session-submit {
  font-size: 17px;
  font-weight: 500;
  font-family: inherit;
  height: 52px;
  background-color: #FFFFFF;
  color: #0a66c2;
  padding: 10px;
  border-radius: 25em;
  text-align: center;
  transition-duration: 41ms;
  border: 1px solid #0a66c2;
  margin-top: 10px;
}

.demo-session-submit:hover {
  background-color: #0a66c22f;
  border: 2px solid #0a66c2;
  cursor: pointer;
}

.signup-redirect {
  font-family: inherit;
  width: 100%;
  margin-top: 32px;
  // text-align: center;
  // position: absolute;
  // top: 70%;
  // left: 50%;
  // margin-right: 50%;
  // transform: translate(-50%, -50%)
}

.redirect-link {
  text-decoration: none;
  font-size: 16px;
  font-weight: 600;
  color: #0a66c2;
  padding: 8px 8px;
  transition-duration: 167ms;
}

.redirect-link:hover {
  text-decoration: underline;
  border: none;
  background-color: #0a66c22f;
  color: #0a66c2;
  padding: 8px 8px;
  border-radius: 25em;
}

.form-header-text p {
  padding-bottom: 7px;
}

.third-party-session-spacing-box {
  display: flex;
  height: 24px;
  width: 100%;
  justify-content: center;
}

.third-party-session-spacing-line {
  height: 9px;
  width: 43%;
  border-bottom: 1.2px solid rgba(0, 0, 0, 0.2);
}

.third-party-session-spacing-word {
  color: rgba(0, 0, 0, 0.6);
  font-weight: 400;
  line-height: 20px;
  padding-left: 12px;
  padding-right: 12px;
  font-size: 14px;
}

.floating-label {
  position: absolute;
  pointer-events: none;
  font-size: 18px;
  font-weight: 400;
  line-height: 20px;
  color: rgba(0, 0, 0, 0.6);
  left: 13.5px;
  top: 38px;
  transition: 0.2s ease all;
}

.session-input:focus ~ .floating-label {
  top: 25px;
  // bottom: 10px;
  left: 12px;
  font-size: 14px;
  color: rgb(0, 0, 0);
  opacity: 1;
}

